--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="chore-door">Chore Door Game</a>
+  <a href="chore-door/index.html">Chore Door Game</a>
 </body>
 </html>
