--- a/chore-door/index.html
+++ b/chore-door/index.html
@@ -6,6 +6,7 @@
     <title>Chore Door!</title>
     <link href="./style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="head">
