Install material design icons

--- a/chore-door/index.html
+++ b/chore-door/index.html
@@ -24,21 +24,21 @@
                   <td class="instructions-number">1
                     </td>
                   <td class="instructions-text">
-                    Hiding behind one of these doors is the ChoreBot.
+                    Hiding behind one of these doors is the <b>ChoreBot</b>.
                     </td>
                 </tr>
                 <tr>
                   <td class="instructions-number">2
                     </td>
                   <td class="instructions-text">
-                    Your mission is to open all of the doors without running into the ChoreBot.
+                    Your mission is to open all of the doors without running into the <b>ChoreBot</b>.
                     </td>
                 </tr>
                 <tr>
                   <td class="instructions-number">3
                     </td>
                   <td class="instructions-text">
-                    If you manage to avoid the ChoreBot until you open the very last door, you win!
+                    If you manage to avoid the <b>ChoreBot</b> until you open the very last door, you win!
                     </td>
                 </tr>
                 <tr>
