--- a/chore-door/index.html
+++ b/chore-door/index.html
@@ -7,17 +7,19 @@
     <link href="./style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
     <div class="head">
         <image src="https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/logo.svg" />
         </div>
         <div class="title-row">
-            <image src="https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/star.svg" />
+          <i class="material-icons" id="star">star</i>
             <p class="instructions-title">
                 Instructions
                 </p>
-            <image src="https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/star.svg" />
+                <i class="material-icons" id="star">star</i>
             </div>
             <table class="instructions-row" style="margin-left:auto;margin-right:auto;">
                 <tr>
