--- a/chore-door/index.html
+++ b/chore-door/index.html
@@ -15,11 +15,11 @@
         <image src="https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/logo.svg" />
         </div>
         <div class="title-row">
-          <i class="material-icons" id="star">star</i>
+          <i class="material-icons" >hdr_weak</i>
             <p class="instructions-title">
                 Instructions
                 </p>
-                <i class="material-icons" id="star">star</i>
+                <i class="material-icons" >hdr_weak</i>
             </div>
             <table class="instructions-row" style="margin-left:auto;margin-right:auto;">
                 <tr>
