--- a/chore-door/index.html
+++ b/chore-door/index.html
@@ -53,7 +53,7 @@
                 </table>
                 
     <div class="door-row">
-        <image id="door1" class="door-frame" src="https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/closed_door.svg" />
+        <image id="door1" class="door-frame" src="chore-door/component/Opening-door-animation_v2.png" />
         <image id="door2" class="door-frame" src="https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/closed_door.svg" />
         <image id="door3" class="door-frame" src="https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/closed_door.svg" />
         </div>
