--- a/chore-door/index.html
+++ b/chore-door/index.html
@@ -54,8 +54,8 @@
                 
     <div class="door-row">
         <image id="door1" class="door-frame" src="component/Opening-door-animation_v2.png" />
-        <image id="door2" class="door-frame" src="https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/closed_door.svg" />
-        <image id="door3" class="door-frame" src="https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/closed_door.svg" />
+        <image id="door2" class="door-frame" src="component/Opening-door-animation_v2.png" />
+        <image id="door3" class="door-frame" src="component/Opening-door-animation_v2.png" />
         </div>
         <div id="start" class="start-row">Good luck!</div>
   <script src="script.js"></script>
