--- a/chore-door/index.html
+++ b/chore-door/index.html
@@ -17,7 +17,7 @@
         <div class="title-row">
           <i class="material-icons" ></i>
             <p class="instructions-title">
-                Instructions
+                INSTRUCTION
                 </p>
                 <i class="material-icons" ></i>
             </div>
@@ -26,21 +26,21 @@
                   <td class="instructions-number">1
                     </td>
                   <td class="instructions-text">
-                    Hiding behind one of these doors is the <b>ChoreBot</b>.
+                    Hiding behind one of these doors is the <b>Girl</b>.
                     </td>
                 </tr>
                 <tr>
                   <td class="instructions-number">2
                     </td>
                   <td class="instructions-text">
-                    Your mission is to open all of the doors without running into the <b>ChoreBot</b>.
+                    Your mission is to open all of the doors without running into the <b>Girl</b>.
                     </td>
                 </tr>
                 <tr>
                   <td class="instructions-number">3
                     </td>
                   <td class="instructions-text">
-                    If you manage to avoid the <b>ChoreBot</b> until you open the very last door, you win!
+                    If you manage to avoid the <b>Girl</b> until you open the very last door, you win!
                     </td>
                 </tr>
                 <tr>
