--- a/chore-door/index.html
+++ b/chore-door/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="head">
-        <image src="https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/logo.svg" />
+        <image id="logo" src="images/Logo-01.svg" />
         </div>
         <div class="title-row">
           <i class="material-icons" ></i>
