--- a/chore-door/index.html
+++ b/chore-door/index.html
@@ -47,9 +47,9 @@
                 </table>
                 
     <div class="door-row">
-        <image id="door1" class="door-frame" src="images/Opening-door-animation_v2.png" />
-        <image id="door2" class="door-frame" src="images/Opening-door-animation_v2.png" />
-        <image id="door3" class="door-frame" src="images/Opening-door-animation_v2.png" />
+        <image id="door1" class="door-frame" src="https://emily8385.github.io/chore-door/images/Opening-door-animation_v2.png" />
+        <image id="door2" class="door-frame" src="https://emily8385.github.io/chore-door/images/Opening-door-animation_v2.png" />
+        <image id="door3" class="door-frame" src="https://emily8385.github.io/chore-door/images/Opening-door-animation_v2.png" />
         </div>
         <div id="start" class="start-row">Good luck!</div>
   <script src="script.js"></script>
