The girl jump scare

--- a/chore-door/index.html
+++ b/chore-door/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="head">
-        <image id="logo" src="images/Logo-02.svg" />
+        <image id="logo" src="images/Logo_v2.svg" />
         </div>
         <div class="title-row">
           <i class="material-icons" ></i>
@@ -52,6 +52,7 @@
         <image id="door3" class="door-frame" src="https://emily8385.github.io/chore-door/images/Opening-door-animation_v2.png" />
         </div>
         <div id="start" class="start-row">Good luck!</div>
+        <div id="overlay"><image id="girl" src="images/Overlay_girl_v2.png" /></div>
   <script src="script.js"></script>
 </body>
 </html>
